# yolov8-tensorrt

./: .gitignore  CMakeLists.txt  README.md  onnx2trt.sh  process.cu  yolov8.cpp
onnx2trt/: onnx2trt.cpp
